<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/main"
        tools:context=".LoginActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            android:background="@drawable/custom_edittext"
            android:backgroundTint="#C1AAE7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="KULLANICI GİRİŞİ"
                    android:id="@+id/loginText"
                    android:textSize="36sp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/turkuaz" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/email"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/mail"
                    android:drawablePadding="8dp"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:id="@+id/password"
                    android:background="@drawable/custom_edittext"
                    android:drawableStart="@drawable/lock"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:padding="8dp"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/cardview_dark_background"
                    android:layout_marginTop="20dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/loginButton"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:onClick="login"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/turkuaz"
                    app:cornerRadius="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/forgetPassword"
                    android:id="@+id/tv_forgetpassword"
                    android:onClick="loginToForgetPassword"
                    android:textSize="18sp"
                    android:layout_marginTop="15dp"
                    android:textAlignment="center"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textColor="@color/turkuaz" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:id="@+id/registerButton"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:onClick="register"
                    android:layout_marginTop="15dp"
                    android:backgroundTint="@color/turkuaz"
                    app:cornerRadius="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
